--- a/views/base.ejs
+++ b/views/base.ejs
@@ -1,6 +1,6 @@
 <% include include/header.ejs %>
-<link rel="stylesheet" href="frozenui/css/global.css"/>
-<link rel="stylesheet" href="frozenui/css/icon-full.css"/>
+<link rel="stylesheet" href="frozenui/css/frozen.css"/>
+<link rel="stylesheet" href="frozenui/css/vip.css"/>
 <link rel="stylesheet" href="css/doc.css"/>
 <div class="main-area">
     <div class="side-area">
