--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
                     <img src="http://frozenui.github.io/static/phones.png" class="fr-banner-ph">
                     <div class="fr-banner-btn">
                         <a href="http://frozenui.github.io/start.html">开始使用</a>
-                        <a href="https://github.com/frozenui/frozenui/archive/v1.3.0.zip">下载</a>
+                        <a href="https://github.com/frozenui/frozenui/archive/1.3.0.zip">下载</a>
                     </div>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                     <div class="fr-item-info fr-frozenui">
                         <h2>随心所用的样式组件</h2>
                         <p>FrozenUI提供的CSS组件是目前QQ会员前端开发组所用的通用样式库。遵循手Q样式规范，基本样式使用离线包的方式减少请求，并提供快速接入的方案。</p>
-                        <a href="http://frozenui.github.io/frozenui">查 看</a>
+                        <a href="http://frozenui.github.io/base.html">查 看</a>
                     </div>
                 </div>
                 <div class="fr-item">
