--- a/css/doc.css
+++ b/css/doc.css
@@ -3,8 +3,7 @@
 .banner {
   width: 100%;
   overflow: hidden;
-  background-image: -webkit-linear-gradient(90deg, #52b6ec, #66dff4);
-  background-image: linear-gradient(90deg,#52b6ec,#66dff4);
+  background-color: #0088cc;
 }
 .banner-content {
 	width: 1140px;
