--- a/css/doc.css
+++ b/css/doc.css
@@ -24,10 +24,16 @@
 }
 .content-area > h2{
   font-size: 20px;
-  margin: 10px auto;
+  margin: 20px auto 10px;
+  font-weight: 700;
 }
+
+.content-area :nth-child(3) {
+  margin-top: 40px;
+}
+
 .cwf-list {
-  -webkit-column-count: 5;
+  -webkit-column-count: 6;
   -webkit-column-gap: 10px;
   /*-webkit-column-rule: 5px solid #333;*/
   -webkit-column-width: 168px; }
