--- a/views/case.ejs
+++ b/views/case.ejs
@@ -1,34 +1,44 @@
-<% include include/header.ejs %>
-<link rel="stylesheet" href="css/doc.css">
-<div class="main-content">
-
-    <div class="banner">
-        <div class="banner-content">
-            <h1><%= title %></h1>
-            <p class="info"><%= desc %></p>
-        </div>
+<!DOCTYPE html>
+<html lang="zh-cmn-Hans">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta http-equiv="Content-Language" content="zh-cn">
+    <meta name="copyright" content="Tencent"/>
+    <meta name="keywords" content="frozen，frozenui，frozenjs，forzen ui，forzen js"/>
+    <meta name="description" content="专注于移动web的UI框架，基于腾讯手机QQ规范"/>
+    <meta name="author" content="Tencent.com"/>
+    <meta name="renderer" content="webkit">
+    <script type="text/javascript" src="http://tajs.qq.com/stats?sId=37342703" charset="UTF-8"></script>
+    <link type="image/x-icon" href="http://frozenui.github.io/static/favicon.ico" rel="icon">
+    <link rel="stylesheet" href="../css/case.css">
+    <title>移动端动效库</title>
+  </head>
+  <body>
+    <div class="header">
+      <div class="wrapper-auto">
+        <h1 class="logo"><a href="http://frozenui.github.io/" target="_blank"><strong>Frozen UI</strong></a> · 动效库</h1>
+        <ul id="menu">
+          <li class="current"><a href="#">全部</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="content"> 
-
-        <div class="content-area">
-
-            <h2 id="css3动效">CSS3动效</h2>
-
-            <div class="jsmodule-content module-css3">
-                <ul id="cssCase" class="cwf-list"></ul>
-            </div>
-
-            <h2 id="使用硬件传感器api">使用硬件传感器api</h2>
-
-            <div class="js-module-content module-api">
-                <ul id="apiCase" class="cwf-list"></ul>
-            </div>
-        </div>
+    <div class="content wrapper">
+      <div class="caselist">
+      </div>
+      <div class="load-more" id="loading"><span>Loading…</span></div>
+      <div class="load-more" id="none" style="display:none;">没有更多啦！</div>
     </div>
-   
-</div>
-
-
-
-<script src="js/case.js"></script>
-<% include include/footer.ejs %>
+    <div class="footer">
+      <div class="links">
+      </div>
+      <div class="copyright">
+         ISUX VAS UI Team  （腾讯社交用户体验设计 － 增值UI开发团队）
+      </div>
+    </div>
+    <script src="http://frozenui.github.io/static/jquery.js"></script>
+    <script src="../js/jquery.qrcode.min.js"></script>
+    <script src="../js/case.js"></script>
+  </body>
+</html>
