--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -31,9 +31,8 @@
     <% } %>
     
 
-    <script src="http://frozenui.github.io/static/sea-modules/seajs/seajs/2.2.1/sea.js"></script>
-    <script src="http://frozenui.github.io/static/jquery.js"></script>
-    <script src="http://frozenui.github.io/frozenui/lib/zepto.min.js"></script>
+    <script src="js/sea.js"></script>
+    <script src="js/jquery.js"></script>
     <script src="libs/highlight/highlight.pack.js"></script>
     <script src="libs/zeroclipboard/dist/ZeroClipboard.min.js"></script>
     <script src="libs/jquery-qrcode/jquery.qrcode.min.js"></script>
