--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -8,6 +8,7 @@
     <meta name="keywords" content="frozen，frozenui，frozenjs，forzen ui，forzen js"/>
     <meta name="description" content="专注于移动web的UI框架，基于腾讯手机QQ规范"/>
     <meta name="author" content="Tencent.com"/>
+    <meta name="baidu-site-verification" content="pHwErTapFr" />
     <link type="image/x-icon" href="http://frozenui.github.io/static/favicon.ico" rel="icon">
     <script type="text/javascript" src="http://tajs.qq.com/stats?sId=37342703" charset="UTF-8"></script>
     <script src="http://frozenui.github.io/frozenui/lib/zepto.min.js"></script>
