--- a/views/case.ejs
+++ b/views/case.ejs
@@ -10,6 +10,7 @@
     <meta name="description" content="专注于移动web的UI框架，基于腾讯手机QQ规范"/>
     <meta name="author" content="Tencent.com"/>
     <meta name="renderer" content="webkit">
+    <meta name="baidu-site-verification" content="pHwErTapFr" />
     <script type="text/javascript" src="http://tajs.qq.com/stats?sId=37342703" charset="UTF-8"></script>
     <link type="image/x-icon" href="http://frozenui.github.io/static/favicon.ico" rel="icon">
     <link rel="stylesheet" href="../css/case.css">
